# electronic-sensor-weather

./: .gitignore  .gitmodules  CMakeLists.txt  main.ino
cmake/: parameters.example.txt
cmake/Platform/: Arduino.cmake
src/com/osteres/automation/weathersensor/: WeatherSensorApplication.cpp  WeatherSensorApplication.h
src/com/osteres/automation/weathersensor/action/: ActionManager.h  TransmitWeatherValue.h
src/com/osteres/automation/weathersensor/component/: WeatherBuffer.h
src/com/osteres/automation/weathersensor/display/: WeatherOutput.h
